Some information added to index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-Benedict Timothy Carlton Cumberbactch was born in London on July 19, 1976. He is an actor like his mother Wanda Ventham and his father Timothy Carlton (Timothy Carton (Timothy Carlton Congdon Cumberbatch).He was educated at Brambletye school and Harrow School. As a student, he took part in school plays such as; William Shakespeare’s A Midsummer Night’s Dream. Benedict Cumberbatch graduated from the University of Manchester and earned master's deegre in classical acting from the London Academy of Music and Dramatic Art.
-Cumberbatch has worked in theatre, television, film and radio. He first performed at the Open Air Theatre, Regent's Park in Shakespearean productions. Over the next few years, he continued performing in London theatres, often in classics such as Henrik Ibsen’s Hedda Gabler (2005; nominated for a Laurence Olivier Award for best supporting actor) and Eugène Ionesco’s Rhinoceros (2007). He became a familiar face on television as well, playing supporting roles in series such as Tipping the Velvet and Silent Witness (both 2002), Fortysomething (2003), and To the Ends of the Earth (2005). In 2005 he was nominated for a BAFTA TV Award for best actor for his portrayal of physicist Stephen Hawking in the BBC television biopic Hawking (2004). Cumberbatch’s first major film role was in Amazing Grace (2006), a historical treatment of politician William Wilberforce’s antislavery efforts, in which Cumberbatch played Prime Minister William Pitt the Younger.
+Benedict Timothy Carlton Cumberbactch was born in London on July 19, 1976. He is an actor like his mother Wanda Ventham and his father 
+Timothy Carlton (Timothy Carton (Timothy Carlton Congdon Cumberbatch).He was educated at Brambletye school and Harrow School. As a
+student, he took part in school plays such as; William Shakespeare’s A Midsummer Night’s Dream. Benedict Cumberbatch graduated from 
+the University of Manchester and earned master's deegre in classical acting from the London Academy of Music and Dramatic Art.
+
+
+Cumberbatch has worked in theatre, television, film and radio. He first performed at the Open Air Theatre, Regent's Park in Shakespearean 
+productions. Over the next few years, he continued performing in London theatres, often in classics such as Henrik Ibsen’s Hedda Gabler 
+(2005; nominated for a Laurence Olivier Award for best supporting actor) and Eugène Ionesco’s Rhinoceros (2007). He became a familiar face
+on television as well, playing supporting roles in series such as Tipping the Velvet and Silent Witness (both 2002), Fortysomething (2003),
+and To the Ends of the Earth (2005). In 2005 he was nominated for a BAFTA TV Award for best actor for his portrayal of physicist Stephen
+Hawking in the BBC television biopic Hawking (2004). Cumberbatch’s first major film role was in Amazing Grace (2006), a historical 
+treatment of politician William Wilberforce’s antislavery efforts, in which Cumberbatch played Prime Minister William Pitt the Younger.
+   
+
