some files added

--- a/sherlock.html
+++ b/sherlock.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
  <head>
    <title>Sherlock</title>
    <meta charset="utf-8" />
@@ -8,7 +8,10 @@
     
     <body>
 	 
-	<div> <img id="sherlockwall"  src="sherlockwall.jpg" alt="image of sherlock" >  </div>
+	<div> <img id="sherlockwall"  src="changesher.png" alt="image of sherlock" >  </div>
+		<div> <img class="logo"  src="logo.png.png" alt="logo" >  </div>
+		
+		<br/>
 		<h2>Sherlock</h2>
 	   <p>Sherlock is a crime drama television series based on Sir Arthur Conan Doyle's Sherlock Holmes detective stories. Created by 
 	   Steven Moffat and Mark Gatiss, it stars Benedict Cumberbatch as Sherlock Holmes and Martin Freeman as Doctor John Watson. 
